--- a/resume/templates/resume/add_edit_work.html
+++ b/resume/templates/resume/add_edit_work.html
@@ -384,7 +384,7 @@
                 </div>
                 <div id="JobExtradetails" style="display: none;">
                     <div class="row">
-                        <div class="col-md-7 job-suggestions">
+                        <div class="col-sm-7 job-suggestions">
                             <label>Search by job title for pre-written examples</label>
                             <div class="row">
                                 <div class="col-9 nopadding">
@@ -415,7 +415,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-5">
+                        <div class="col-sm-5">
                             <h3>Nice! Now let's add the job description</h3>
                             <div id="display-jog-title-employer-city"></div>
                             <div class="form-group">
