--- a/resume/templates/resume/resume_Listedu.html
+++ b/resume/templates/resume/resume_Listedu.html
@@ -19,8 +19,8 @@
     
 
     <footer>
-        <a href="{% url 'list-work' tracking %}" class="btn back-button"> Back</a>
-        <a href="{% url 'list-skill' tracking %}" class="btn next-button"> Next</a>
+        <a href="{% url 'list-work' tracking %}" class="btn back-button btn-lg"> Back</a>
+        <a href="{% url 'list-skill' tracking %}" class="btn next-button btn-lg"> Next</a>
     </footer>
 
 
