--- a/resume/templates/resume/resume_Listskill.html
+++ b/resume/templates/resume/resume_Listskill.html
@@ -70,8 +70,8 @@
     
     <footer>
         
-        <a href="{% url 'list-edu' tracking %}" class="btn back-button"> Back</a>
-        <a href="{% url 'create-summary' tracking %}" class="btn next-button"> Next</a>
+        <a href="{% url 'list-edu' tracking %}" class="btn back-button btn-lg"> Back</a>
+        <a href="{% url 'create-summary' tracking %}" class="btn next-button btn-lg"> Next</a>
 
 
     </footer>
