--- a/resume/templates/resume/resume_summary.html
+++ b/resume/templates/resume/resume_summary.html
@@ -61,8 +61,8 @@
 
         <footer>
 
-            <a href="{% url 'list-skill' tracking %}" class="btn back-button"> Back</a>
-            <button id="hiddennext"  onclick="submitsummaryform();" class="btn next-button" > Next</button>
+            <a href="{% url 'list-skill' tracking %}" class="btn back-button btn-lg"> Back</a>
+            <button id="hiddennext"  onclick="submitsummaryform();" class="btn next-button btn-lg" > Next</button>
   
         </footer>
 </div>    
