--- a/resume/templates/resume/resume_basic.html
+++ b/resume/templates/resume/resume_basic.html
@@ -190,8 +190,8 @@
         </div>
 
         <footer style="padding-top: 20px;padding-bottom: 20px; ">
-            <button class="btn back-button">Back</button>
-            <button id="basicnext"  class="btn next-button">Next</button>
+            <button class="btn back-button btn-lg">Back</button>
+            <button id="basicnext"  class="btn next-button btn-lg">Next</button>
         </footer>
           
 
