--- a/resume/templates/resume/resume_basic.html
+++ b/resume/templates/resume/resume_basic.html
@@ -3,7 +3,28 @@
 {% block content %}
 {% load static %}
 {% block head %}
+<link href="{% static 'css/cropper.css' %}" rel="stylesheet">
+<link rel="stylesheet" href="https://unpkg.com/bootstrap@4/dist/css/bootstrap.min.css" crossorigin="anonymous">
 
+
+<style>
+    .label {
+      cursor: pointer;
+    }
+
+    .progress {
+      display: none;
+      margin-bottom: 1rem;
+    }
+
+    .alert {
+      display: none;
+    }
+
+    .img-container img {
+      max-width: 100%;
+    }
+  </style>
 {% endblock head %}
 <div class="container">
     <meta name="csrf-token" content="{{ csrf_token }}">
@@ -16,19 +37,193 @@
 
         <div class="row">
             <div class="col-md-2 mcentre">
-                <div class="row ">
+                <!-- <div class="row ">
                     {% if image %}
                     <img src="{{ image.url }}" alt="Sample Image for Photo Upload" id="uploadimage" class="img-fluid">
                     {% else %}
                     <img src="/media/NoImageBlue.png" alt="Sample Image for Photo Upload" id="uploadimage" class="img-fluid">
                     {% endif %}
-                </div>
-                  
+                </div> -->
+
+                 <!-- <form id="image-form" enctype="multipart/form-data">
+                    <label for="image-file" class="btn btn-primary">Upload image
+                        <input type="file" class="item-img file center-block filepreviewprofile" id="image-file" name="image"  style="width: 0px;height: 0px;overflow: hidden;">
+                    </label>
+                  </form>  -->
+                  <!-- <label for="image-file" class="btn btn-primary">Upload image
+                    <input type="file" class="item-img file center-block filepreviewprofile" id="image-file" name="image"  style="width: 0px;height: 0px;overflow: hidden;">
+                </label> -->
+
+                <label class="label" data-toggle="tooltip" title="Change your avatar">                   
+                    {% if image %}
+                    <img class="rounded" id="avatar" src="{{ image.url }}" alt="avatar">
+                    {% else %}
+                    <img class="rounded" id="avatar" src="/media/NoImageBlue.png" alt="avatar">
+                    {% endif %}
+                    <input type="file" class="sr-only" id="input" name="image" accept="image/*">
+                  </label>
+                  <div class="progress">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
+                  </div>
+                  <div class="alert" role="alert"></div>
+                  <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title" id="modalLabel">Crop the image</h5>
+                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                          </button>
+                        </div>
+                        <div class="modal-body">
+                          <div class="img-container">
+                            <!-- <img id="image" src="https://avatars0.githubusercontent.com/u/3456749"> -->
+
+
+                            {% if image %}
+                            <img class="rounded" id="image" src="{{ image.url }}" alt="avatar">
+                            {% else %}
+                            <img class="rounded" id="image" src="/media/NoImageBlue.png" alt="avatar">
+                            {% endif %}
+                          </div>
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                          <button type="button" class="btn btn-primary" id="crop">Crop</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+
+                  <script src="https://unpkg.com/jquery@3/dist/jquery.min.js" crossorigin="anonymous"></script>
+                  <script src="https://unpkg.com/bootstrap@4/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+                  <script src="{% static 'js/cropper.js' %}"></script>
+                  <script>
+                    window.addEventListener('DOMContentLoaded', function () {
+                      var avatar = document.getElementById('avatar');
+                      var image = document.getElementById('image');
+                      var input = document.getElementById('input');
+                      var $progress = $('.progress');
+                      var $progressBar = $('.progress-bar');
+                      var $alert = $('.alert');
+                      var $modal = $('#modal');
+                      var cropper;
+                
+                      $('[data-toggle="tooltip"]').tooltip();
+                
+                      input.addEventListener('change', function (e) {
+                        var files = e.target.files;
+                        var done = function (url) {
+                          input.value = '';
+                          image.src = url;
+                          $alert.hide();
+                          $modal.modal('show');
+                        };
+                        var reader;
+                        var file;
+                        var url;
+                
+                        if (files && files.length > 0) {
+                          file = files[0];
+                
+                          if (URL) {
+                            done(URL.createObjectURL(file));
+                          } else if (FileReader) {
+                            reader = new FileReader();
+                            reader.onload = function (e) {
+                              done(reader.result);
+                            };
+                            reader.readAsDataURL(file);
+                          }
+                        }
+                      });
+                
+                      $modal.on('shown.bs.modal', function () {
+                        cropper = new Cropper(image, {
+                          aspectRatio: 1,
+                          viewMode: 3,
+                        });
+                      }).on('hidden.bs.modal', function () {
+                        cropper.destroy();
+                        cropper = null;
+                      });
+                
+                      document.getElementById('crop').addEventListener('click', function () {
+                        var initialAvatarURL;
+                        var canvas;
+                
+                        $modal.modal('hide');
+                
+                        if (cropper) {
+                          canvas = cropper.getCroppedCanvas({
+                            width: 160,
+                            height: 160,
+                          });
+                          initialAvatarURL = avatar.src;
+                          avatar.src = canvas.toDataURL();
+                          $progress.show();
+                          $alert.removeClass('alert-success alert-warning');
+                          canvas.toBlob(function (blob) {
+                            var formData = new FormData();
+                
+                            formData.append('image', blob, 'avatar.jpg');
+                            formData.append('tracking', 'ZvuJmZpu0doEabFMzEQ0');
+
+                            $.ajax('http://127.0.0.1:8000/api/add-edit-resume/', {
+                              method: 'POST',
+                              data: formData,
+                              processData: false,
+                              contentType: false,
+                
+                              xhr: function () {
+                                var xhr = new XMLHttpRequest();
+                
+                                xhr.upload.onprogress = function (e) {
+                                  var percent = '0';
+                                  var percentage = '0%';
+                
+                                  if (e.lengthComputable) {
+                                    percent = Math.round((e.loaded / e.total) * 100);
+                                    percentage = percent + '%';
+                                    $progressBar.width(percentage).attr('aria-valuenow', percent).text(percentage);
+                                  }
+                                };
+                
+                                return xhr;
+                              },
+                
+                              success: function () {
+                                $alert.show().addClass('alert-success').text('Upload success');
+                              },
+                
+                              error: function () {
+                                avatar.src = initialAvatarURL;
+                                $alert.show().addClass('alert-warning').text('Upload error');
+                              },
+                
+                              complete: function () {
+                                $progress.hide();
+                              },
+                            });
+                          });
+                        }
+                      });
+                    });
+                  </script>
+
+
+
+                 
+
+               
+
+
                     
                       <!-- Button to Open the Modal -->
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+                    <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
                         Upload image
-                    </button>
+                    </button> -->
 
                     <!-- The Modal -->
                     <div class="modal fade " id="myModal">
@@ -352,7 +547,7 @@
                     updateSocial('PUT',social,select.value,socialurlInput.value);
                 });
 
-                socialurlInput.addEventListener('change', function() {
+                socialurlInput.addEventListener('input', function() {
                     updateSocial('PUT',social,select.value,socialurlInput.value);
 
                 });
