--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -32,6 +32,31 @@ Our user-friendly interface and powerful search engine make job hunting easy and
  Join our community of job seekers and employers today!{% endblock %}
 {% block ogsite_name %}CareerCrest{% endblock %}
 
+{% block head %}
+<style>
+
+
+@media screen and (min-width: 1200px) {
+
+  .image-container {
+    height: 150px;
+    width: 150px;
+
+  }
+
+  
+}
+.job-item img {
+    width: 100%;
+  height: 100%;
+  object-fit: contain;
+  }
+
+
+</style>
+
+{% endblock head %}
+
 
 {% block content %}
 {% load static %}
@@ -139,7 +164,10 @@ Our user-friendly interface and powerful search engine make job hunting easy and
                             $('.my-list').append(`
                             <div class="job-item mb-4">
                                     <a href="${data[i]['theurl']}">
-                                        <img src="${data[i]['companylogo'] || '/static/img/android-chrome-512x512.png'}" alt="Job Image" style="width: 80px; height: 80px; margin-top: 15px;">
+                                        <div class="image-container">
+                                            <img src="${data[i]['companylogo'] || '/static/img/android-chrome-512x512.png'}" alt="Job Image">
+                                        </div>
+
                                     </a>
                                     <div class="job-details">
                                         <a href="${data[i]['theurl']}"><h2 class="job-title" style="font-size: 15px; margin-top: 15px;">${data[i]['title'] || 'Vacancy'}</h2></a> 
