--- a/static/css/style.css
+++ b/static/css/style.css
@@ -294,10 +294,16 @@
     border-radius: 5px;
     margin-bottom: 20px;
   }
+
+  .image-container {
+    width: 150px;
+    height: 150px; /* Adjust the height as needed */
+    overflow: hidden;
+  }
   
   .job-item img {
-    width: 150px;
-    height: 150px;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     border-radius: 5px;
     margin-right: 20px;
